정리 파일 수정

--- a/ch2/static/css/base.css
+++ b/ch2/static/css/base.css
@@ -71,4 +71,46 @@ div#menu a:link, div#menu a:visited {
 
 div#menu > li {
     display: table-cell;
+	vertical-align: middle;
+	border: 2px solid #bbb;
+	text-align: center;
+	font-weight: bold;
+}
+
+div#menu li ul {
+    display: none;
+    position: absolute;
+    margin: 0;
+    padding: 10px 10px 5px 10px;
+    list-style: none;
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    background: white;
+    z-index: 1;
+}
+
+div#menu li:hover ul {
+    display: block;
+}
+
+a:link, a:visited {
+    color: #369;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td, th {
+    line-height: 18px;
+    border-bottom: 1px solid #eee;
+    vertical-align: top;
+    padding: 5px 15px;
+    font-family: "Lucida Grande", Verdana, Arial, sans-serif;
 }
