--- a/ch2/blog/templates/blog/post_archive.html
+++ b/ch2/blog/templates/blog/post_archive.html
@@ -2,7 +2,7 @@
 <ul>
     {% for date in date_list %}
     <li style="display: inline;">
-        <a href="{% url 'blog:post_year_archive' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
+        <a href="{% url 'blog:post_archive_year' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
     </li>
     {% endfor %}
 </ul>
