--- a/ch2/bookmark/templates/bookmark/bookmark_list.html
+++ b/ch2/bookmark/templates/bookmark/bookmark_list.html
@@ -8,7 +8,7 @@
     <h1>Bookmark List</h1>
     <u1>
         {% for bookmark in object_list %}
-            <li><a href="{% url 'detail' bookmark.id %}">{{ bookmark }}</a></li>
+            <li><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark }}</a></li>
         {% endfor %}
     </u1>
 </div>
