--- a/ch2/templates/home.html
+++ b/ch2/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id="content_home">
     <div id="homeimg">
-        <a href="/"><img src="{% static 'img/django-actor-big.jpg' %}" style="height:256px;" /></a>
+        <a href="/"><img src="{% static 'img/django.jpg' %}" style="height:256px;" /></a>
         <h4 style="margin: 0;">This is Django powered web site.</h4>
     </div>
     
